# goldbeck-pattern

./: .gitignore  .pnp.cjs  Cargo.toml  LICENSE  README.md  Trunk.toml  index.html  package.json  rustfmt.toml  styles.css  tailwind.config.js
.github/workflows/: deploy.yml
.github/workfows/: deploy.yml
src/: css.rs  export.rs  grid.rs  main.rs  theme.rs  tiling.rs  utils.rs
src/components/: app.rs  canvas.rs  controls.rs  dialog.rs  editor.rs  export_dialog.rs  mod.rs  pattern.rs  theme_selector.rs
