[package]
name = "goldbeck-pattern"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.64"
leptos = { version = "0.4.2", features = ["csr", "nightly"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics", "js"] }
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["Url", "Blob", "BlobPropertyBag", "HtmlElement", "Document", "Window", "Element", "SvgElement", "HtmlAnchorElement", "DomImplementation", "XmlSerializer", "Node"] }
